# hikyaku

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md  mise.toml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: commands.md  design-doc-numbering.md
.claude/skills/hikyaku/: SKILL.md
.mise/: config.toml.sample
admin/: mise.toml  package.json  vite.config.ts
admin/src/: App.tsx  api.ts  types.ts
admin/src/components/: AgentTabs.tsx  Dashboard.tsx  KeyManagement.tsx  LoginPage.tsx  MessageList.tsx  MessageRow.tsx  SendMessageForm.tsx
client/: pyproject.toml
client/src/hikyaku_client/: api.py  cli.py  output.py
client/tests/: test_cli.py  test_cli_register.py
design-docs/0000004-webui-message-viewer/: design-doc.md
design-docs/0000005-streaming-subscribe/: design-doc.md
design-docs/0000006-ty-type-checking/: design-doc.md
design-docs/0000007-api-key-specification/: design-doc.md
design-docs/0000008-cli-option-specification/: design-doc.md
design-docs/0000009-mise-task-fullpath/: design-doc.md
design-docs/a2a-registry-broker/: design-doc.md
docs/spec/: a2a-operations.md  cli-options.md  data-model.md  registry-api.md  streaming-subscribe.md  webui-api.md
mcp-server/: mise.toml
mcp-server/src/hikyaku_mcp/: server.py
mcp-server/tests/: test_registry.py  test_server.py  test_sse_client.py
registry/: pyproject.toml
registry/src/hikyaku_registry/: agent_card.py  auth.py  cleanup.py  config.py  executor.py  main.py  models.py  pubsub.py  registry_store.py  task_store.py  webui_api.py
registry/src/hikyaku_registry/api/: registry.py  subscribe.py
registry/tests/: conftest.py  test_a2a.py  test_agent_auth_changes.py  test_api_keys.py  test_auth.py  test_auth0.py  test_cleanup.py  test_e2e_subscribe.py  test_executor.py  test_key_endpoints.py  test_pubsub.py  test_registry_api.py  test_registry_store.py  test_subscribe.py  test_task_store.py  test_webui_api.py  test_webui_mount.py
