[project]
name = "hikyaku"
version = "0.1.0"
description = "A2A-native message broker and agent registry for coding agents"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["registry", "client"]

[tool.uv.sources]
hikyaku-registry = { workspace = true }
hikyaku-client = { workspace = true }

[dependency-groups]
dev = [
    "hikyaku-registry",
    "hikyaku-client",
    "fakeredis>=2.34.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
exclude = ["vendor/"]
