[project]
name = "hikyaku"
version = "0.1.0"
description = "A2A-native message broker and agent registry for coding agents"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["registry", "client", "mcp-server"]

[tool.uv.sources]
hikyaku-registry = { workspace = true }
hikyaku-client = { workspace = true }
hikyaku-mcp = { workspace = true }

[dependency-groups]
dev = [
    "hikyaku-registry",
    "hikyaku-client",
    "hikyaku-mcp",
    "fakeredis>=2.34.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
    "ty>=0.0.26",
]

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["registry/src", "client/src"]

[tool.ty.analysis]
# Suppress errors for third-party libraries without type stubs.
# Add more patterns as needed when new dependencies are introduced.
allowed-unresolved-imports = [
    "a2a.*",
    "redis.*",
    "fakeredis.*",
    "pydantic_settings.*",
    "sse_starlette.*",
    "starlette.*",
    "fastapi.*",
    "uvicorn",
    "click.*",
    "httpx.*",
    "httpx_sse.*",
]

[tool.ty.rules]
# Suppress false positives from redis.asyncio type stubs that return
# Union[Awaitable[T], T] for sync/async compatibility. All instances
# in this codebase are redis async calls that are correctly awaited.
invalid-await = "ignore"

[tool.ruff]
exclude = ["vendor/"]
