[project]
name = "hikyaku-client"
version = "0.1.0"
description = "CLI tool for interacting with the Hikyaku A2A message broker"
requires-python = ">=3.12"
dependencies = [
    "click",
    "httpx",
    "a2a-sdk",
]

[project.scripts]
hikyaku = "hikyaku_client.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hikyaku_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
